--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -23,7 +23,8 @@
       <div class="header-content">
         <!--<div class="float-left">-->
           <h1>
-            Add New Contact
+            <ng-container *ngIf="scheduleAction !== editScheduleAction"> Add New Contact </ng-container>
+            <ng-container *ngIf="scheduleAction === editScheduleAction"> Edit Contact</ng-container>
           </h1>
           <br />
         <!--</div>-->
@@ -362,12 +363,19 @@
               <button class="btn btn-previous btn-left" type="button" (click)="cancelStep()">
                 Cancel
               </button>
+              
               <button class="btn btn-secondary btn-right" type="button" (click)="saveAndAddMore()">
-                Save &amp; Add More
+                Save
+                <ng-container *ngIf="scheduleAction !== editScheduleAction">
+                  &amp; Add More
+                </ng-container>
               </button>
-              <button class="btn btn-previous btn-right" type="button"  (click)="viewContacts()">
-                View Contacts
-              </button>
+
+              <ng-container *ngIf="scheduleAction !== editScheduleAction">
+                <button class="btn btn-previous btn-right" type="button"  (click)="viewContacts()">
+                  View Contacts
+                </button>
+              </ng-container>
             </div>
           </div>          
         </div>
