pre-populate subtransactions for sched D

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -331,7 +331,7 @@
                     <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'entity_type')">
                       <ng-select #entityTypeSelect 
                         [items]="entityTypes" 
-                        (change)="handleEntityTypeChange($event, col)"
+                        (change)="handleEntityTypeChange($event)"
                         class="forms__select entity-type-select" 
                         [formControlName]="col?.name" 
                         bindValue="entityType"
