Fixing edit and view mode for f99 form (#1330)

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -335,7 +335,7 @@
               <div class="grid-row">
                 <div class="grid-row__col grid-row__col--12">
                   <h5>
-                    {{ file ? file.name : fileNameToDisplay }}
+                    {{ file && file.name ? file.name : fileNameToDisplay }}
                     <!--<button type="button" class="btn btn-link" (click)="open(deletePDF)">-->
                     <button type="button" class="btn btn-link" (click)="deletePDFFile()" [disabled]="!this.editMode">
                     <span vertical-align="top" class="close-icon"></span>
@@ -374,8 +374,11 @@
             <button class="btn btn-previous btn-left" type="button" (click)="previousStep()">
               Previous
             </button>
-            <button class="btn btn-primary btn-right" type="submit">
+            <button *ngIf="editMode" class="btn btn-primary btn-right" type="submit">
               Save & Continue
+            </button>
+            <button *ngIf="!editMode" class="btn btn-primary btn-right" type="submit">
+              Next
             </button>
           </div>
         </div>
