--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -45,7 +45,7 @@
         [steps]="[
           { text: 'Report', step: 'step_1', edit: editMode },
           { text: 'Type', step: 'step_2', edit: editMode },
-          { text: 'Form', step: 'step_3', edit: editMode },
+          { text: 'Form', step: 'step_3', edit: editMode, transactionCategory: transactionCategory },
           { text: 'Preview', step: 'step_4', edit: editMode },
           { text: 'Sign', step: 'step_5', edit: editMode },
           { text: 'Submit', step: 'step_6', edit: editMode }
