--- a/front-end/src/app/forms/sched-f/sched-f.component.html
+++ b/front-end/src/app/forms/sched-f/sched-f.component.html
@@ -306,19 +306,14 @@
                   <div class="form-group" [style.width]="setSelectTypeWidth(col)">
                     <label [for]="col?.name">
                       {{ col?.text }}
-                      <!-- replace button with div below to resolve tab issue into button -->
-                      <!-- <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
-                        tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
-                        <i class="info-icon" aria-hidden="true"></i>
-                        <span class="sr-only">Click here for more information</span>
-                      </button> -->
                       <div type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                         tooltipClass="form-tooltip" *ngIf="col?.infoIcon">
                         <i class="info-icon" aria-hidden="true"></i>
                         <span class="sr-only">Click here for more information</span>
                       </div>
 
-                      <ng-container *ngIf="!col?.validation?.required && col?.name !== 'contribution_aggregate'">
+                      <ng-container *ngIf="!col?.validation?.required && col?.name !== 'contribution_aggregate'
+                                            && !col.staticField">
                         (Optional)
                       </ng-container>
                     </label>
