button label change debt

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -425,7 +425,7 @@
               <button class="btn btn-primary dropdown-toggle" id="jfMemoDropdown" ngbDropdownToggle>
                 <i class="plus-icon-circle" aria-hidden="true"></i>
                 <ng-container *ngIf="transactionType === 'DEBT_TO_VENDOR'; else jfTransferMemo">
-                  Make a Payment to Debt
+                  Make a Payment on Debt
                 </ng-container>
                 <ng-template #jfTransferMemo>Add JF Transfer Memo</ng-template>
                 
