css and ui treak on profile acct levin section

--- a/front-end/src/app/account/account.component.scss
+++ b/front-end/src/app/account/account.component.scss
@@ -131,8 +131,23 @@
 		}
 	}
 }
+
 #levin_accounts_list {
 margin-left: 20%;
+margin-top: 20px;
+}
+
+.input-group {
+	width: 80%;
+}
+
+.input-group-button {
+margin-left:15px;
+margin-top:10px;
+}
+
+#levin_acct_name {
+	margin-top: 5px;
 }
 
 @include form-btns();
